compiz (1:0.9.8.4-0ubuntu3) UNRELEASED; urgency=low

  * debian/config, :
    - add the default gnome_session profile to use gsettings as the migrated
      user are on this profile (LP: #1036752). The existing migration scripts
      will upgrade the user config.

 -- Didier Roche <didrocks@ubuntu.com>  Wed, 17 Oct 2012 12:19:08 +0200

compiz (1:0.9.8.4-0ubuntu2) quantal; urgency=low

  * debian/patches/unity_support_test.patch:
    - force llvmpipe in the unity profile if we are in the grey zone, meaning:
      the card and drivers have opengl support, however, it doesn't met unity
      requirements (opengl < 1.4, no vertex shaders support…). Thanks duflu
      (LP: #1039155)
      Note that we already discourage them to upgrade from precise to quantal
      with a warning before the upgrade, however let's get a slow ui rather
      than none on the iso as well.

 -- Didier Roche <didrocks@ubuntu.com>  Tue, 09 Oct 2012 15:26:52 +0200

compiz (1:0.9.8.4-0ubuntu1) quantal-proposed; urgency=low

  * debian/control:
    - Add dependency on gnome-settings-daemon for compiz-gnome, since some
      tests need the g-s-d gsetting schemas
  * New upstream release.
    - FTBFS with -DCOMPIZ_BUILD_TESTING=OFF if libgtest-dev is not installed 
      (LP: #1057421)
    - [performance] glXSwapIntervalEXT called every frame, which is very slow 
      on Nvidia. (LP: #1051286)
    - opacify plugin: opacity isn't reset after switching window (LP: #1050757)
    - cmake fails on python 2.6 as sys.version_info does not contain 
      major_version or minor_version (LP: #1048964)
    - scale mode is not visible if a fullscreen window is unredirected 
      (LP: #1047168)
    - Unredirected fullscreen windows flicker briefly when another window 
      (like a menu) opens above them (LP: #1046664)
    - Week33 - Grid highlight window appears while switching between workspaces
      (LP: #1037142)
    - gtk-window-decorator leaks large numbers of pixmaps and pixmap memory 